Fix overlapping search-by buttons on desktop view

--- a/resources/public/stylesheets/scss/cs-style.scss
+++ b/resources/public/stylesheets/scss/cs-style.scss
@@ -143,7 +143,7 @@ body {
   z-index: $zIndex-1;
 }
 
-ion-content {;
+ion-content {
   margin-bottom: 0 !important;
 }
 
@@ -596,6 +596,10 @@ form .search-button:hover {
 #search-by-btns {
   margin-top: 15%;
   clear: left;
+
+  @include breakpoint(desktop) {
+    margin-top: 4%;
+  }
 }
 
 #search-by-btns button {
